hot loader does not work :'(

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <head>
   <meta charset="UTF-8">
-  <title>react-heatpack</title>
+  <title>Ts example</title>
 </head>
 <body>
   <div id="app"></div>
-  <script src="/bundle.js"></script>
+  <script src="http://localhost:3000/assets/bundle.js"></script>
 </body>
